kubernetes/auth.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vela-auth
  namespace: vela-services
  labels:
    app.kubernetes.io/name: vela-auth
spec:
  containers:
    - name: vela-auth
      image: supabase/gotrue:v2.177.0
      imagePullPolicy: IfNotPresent
      ports:
        - name: http
          containerPort: 8081
          protocol: TCP
      livenessProbe:
        httpGet:
          path: /health
          port: http
        periodSeconds: 5
        timeoutSeconds: 5
        failureThreshold: 3
      readinessProbe:
        httpGet:
          path: /health
          port: http
        initialDelaySeconds: 10
  volumes:
    - name: init-sql
      configMap:
        name: vela-auth-config
  restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: vela-auth-service
  namespace: vela-services
spec:
  selector:
    app.kubernetes.io/name: vela-auth
  ports:
    - name: http
      port: 8081
      targetPort: 8081
      protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vela-auth-ingress
  namespace: vela-services
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: vela-auth-service
                port:
                  number: 8081
