kubernetes/studio.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vela-studio
  namespace: vela-services
  labels:
    app.kubernetes.io/name: vela-studio
spec:
  containers:
    - name: vela-studio
      image: simplyblock/vela-studio:latest
      imagePullPolicy: IfNotPresent
      ports:
        - name: http
          containerPort: 3000
          protocol: TCP
      livenessProbe:
        httpGet:
          path: /
          port: http
        periodSeconds: 5
        timeoutSeconds: 5
        failureThreshold: 3
      readinessProbe:
        httpGet:
          path: /
          port: http
        initialDelaySeconds: 20
  restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: vela-studio-service
  namespace: vela-services
spec:
  selector:
    app.kubernetes.io/name: vela-studio
  ports:
    - name: vela-studio-http
      port: 3000
      targetPort: 3000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vela-studio-ingress
  namespace: vela-services
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vela-studio-service
                port:
                  number: 3000
